# drum-scanner

./: .gitmodules  assembly.scad  bearing_frame.scad  bom3d.txt  chassis_1.scad  chassis_2.scad  common.scad  motor_gear.scad  ring_gear.scad
code/: shell.nix
code/drum_driver/: Cargo.toml
code/drum_driver/src/: main.rs  mutex.rs
stl/: bearing_frame.stl  chassis_1.stl  chassis_2.stl  motor_gear.stl  ring_gear.stl
