[package]
name = "drum_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
lto = true
opt-level="s"
debug = true

debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
rpath = false

[profile.release]
panic = "abort"
lto = true
opt-level="s"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = { version = "0.3.4", features = ["atmega328p"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-uno"]